objects/BMCServiceDesk__SSLayoutDetail__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__AdvancedLogic__c</fullName>
        <label>Advanced Logic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FieldName__c</fullName>
        <label>Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FieldType__c</fullName>
        <label>Field Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LayoutId__c</fullName>
        <label>Layout Id</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Self Service Layout Detail</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__LayoutId__c</columns>
        <columns>BMCServiceDesk__FieldName__c</columns>
        <columns>BMCServiceDesk__FieldType__c</columns>
        <columns>BMCServiceDesk__AdvancedLogic__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Self Service Layout Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>